# polymarket-arb

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml
arb-dashboard/: Dockerfile  docker-compose.yml  server.py
arb-dashboard/app/: index.html  package-lock.json  package.json  tsconfig.app.json
arb-dashboard/app/src/: ArbDashboard.tsx  index.css  main.tsx
arb-dashboard/app/src/hooks/: useApi.ts  useSoundSettings.ts  useTick.ts
arb-dashboard/app/src/lib/: types.ts  utils.ts
scripts/: apply-tcp-tuning.sh  apply-vpn-split-tunnel.sh  approve.py  set_allowances.py  setup-vpn.sh  start.sh  transfer_funds.py
src/: config.rs  data.rs  logging.rs  main.rs  redemption.rs
src/executor/: mod.rs  positions.rs
src/feeds/: aggregator.rs  binance.rs  coinbase.rs  deribit.rs  kraken.rs  mod.rs  okx.rs
src/markets/: book.rs  discovery.rs  fair_value.rs  mod.rs
src/strategy/: divergence.rs  mod.rs  risk.rs
